<resources>
    <string name="app_name">ResumeBuilder</string>
    <string name="build_template_button_text">Build Template</string>

    <string name="add_new_document_button_text">Add New Document</string>
    <string name="add_data_button_text">Add Data</string>

    <string name="title_activity_login">LoginActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="register_link">Don\'t have an account? Register here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_button">Log in</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm password</string>
    <string name="login_link">Have an account? Login here</string>

    <string name="add_data">Add Data</string>
    <string name="view_data">View Data</string>
    <string name="datatype_label">Choose a data type: </string>
    <string-array name="datatypes">
        <item>None</item>
        <item>Text</item>
        <item>Image</item>
        <item>Recommendation Letter</item>
    </string-array>
    <string name="remove_item">Remove</string>
    <string name="obj_name">Block Name</string>
    <string name="obj_data">Block Value</string>
    <string name="submit">Submit</string>

    <string name="data_key_weight">16</string>
    <string name="data_values_weight">40</string>
    <string name="data_button_weight">1</string>
    <string name="simpleDateFormatForTemplateSave">yyyyMMdd_hh_mm_ss</string>

</resources>